--- a/AdventOfCode/AdventOfCode.csproj
+++ b/AdventOfCode/AdventOfCode.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="AdventOfCodeSupport" Version="2.4.3" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
   </ItemGroup>
 
 </Project>
